Issue 45: Asn.jsx ? flag add - experimenting with spacing

--- a/src/css/components/_other.scss
+++ b/src/css/components/_other.scss
@@ -98,7 +98,7 @@ TAGS
 
 .asn__country {
   white-space: nowrap;
-  margin-right: 2em;
+  margin-right: 0.5em;
 }
 
 .asn__flag {
